src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36-45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>46-55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater than 55</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone_2__c</fullName>
        <label>Alternate Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Anniversary_Date__c</fullName>
        <label>Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Birthday__c</fullName>
        <label>Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCU_Source__c</fullName>
        <label>CCU Source</label>
        <picklist>
            <picklistValues>
                <fullName>Newspapers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoardings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site branding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TWG Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TWG Website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Code__c</fullName>
        <description>to capture the campaign code information of the web forms and associate the account to the appropriate campaign</description>
        <label>Campaign Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Code__c</fullName>
        <description>to capture the channel code information of web form and associate the account to NRI or Indian channel</description>
        <label>Channel Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Channel_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Name</label>
        <referenceTo>Channel__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DuplicatesIdentified__c</fullName>
        <label>DuplicatesIdentified</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_2__c</fullName>
        <label>Alternate Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_3__c</fullName>
        <label>Alternate Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Type__c</fullName>
        <label>Email Type</label>
        <picklist>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ethinicity__c</fullName>
        <label>Ethinicity</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Size__c</fullName>
        <label>Family Size</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 or 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 or 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 or 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>more than 7</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LatestDuplicates__c</fullName>
        <label>LatestDuplicates</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Local_Contact_Email__c</fullName>
        <label>Local Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Local_Contact_Number__c</fullName>
        <label>Local Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Local_Name__c</fullName>
        <label>Local Contact Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MasterRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <description>master record used for merge in case of multiple duplicates</description>
        <label>MasterRecord</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <picklist>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Maker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_3__c</fullName>
        <label>Phone 3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_Type__c</fullName>
        <label>Phone Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Place_of_work__c</fullName>
        <label>Place of work</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Status__c</fullName>
        <label>Residential Status</label>
        <picklist>
            <picklistValues>
                <fullName>Indian</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>NRI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suburb__c</fullName>
        <label>Suburb</label>
        <picklist>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thane</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TollFree_Number__c</fullName>
        <description>for capturing the toll free number associated with the CTI call and get the corresponding campaign information</description>
        <label>TollFree Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>Booked_Account</fullName>
        <active>true</active>
        <label>Booked Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Brokers</fullName>
        <active>true</active>
        <label>Brokers</label>
    </recordTypes>
    <recordTypes>
        <fullName>Person_Account</fullName>
        <active>true</active>
        <label>Person Account</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ResidentialCheck</fullName>
        <active>true</active>
        <description>check if residential status is nri and make certain fields mandatory</description>
        <errorConditionFormula>AND(ISPICKVAL( Residential_Status__c ,&quot;NRI&quot;),
OR(
ISBLANK(Local_Contact_Number__c),
ISBLANK( Local_Name__c),
ISBLANK( Local_Contact_Email__c)
))</errorConditionFormula>
        <errorMessage>Please provide Local Contact Name,Local Contact Number and Local Contact Email  if you are NRI</errorMessage>
    </validationRules>
</CustomObject>